<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StartAndroid</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="version">Version:</string>
    <string name="rate">Rate</string>
    <string name="more_apps">More apps</string>
    <string name="search">Search</string>
    <string name="continue_lesson">Continue</string>
    <string name="exit">Exit</string>
    <string name="general">General</string>
    <string name="appearance">Appearance</string>
    <string name="font_size">Size</string>
    <string name="font">Font</string>
    <string name="copyright">©2018–2020 Иван Тимашков</string>
    <string name="grid_view">Grid view</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="fullscreen_mode">Fullscreen mode</string>
    <string name="night_mode">Night mode</string>
    <string name="font_type">Type</string>
    <string name="update">Update</string>
    <string name="p">Premium</string>
    <string name="error">Error</string>
    <string name="no_connection">No internet connection!</string>
    <string name="close">Close</string>
    <string name="mark_as_read">Mark this lesson as read?</string>
    <string name="yes">Yes</string>
    <string name="choose_language">Choose language</string>
    <string name="select_font_size">Select font size</string>
    <string name="content_language">Language of content</string>
    <string name="added_to_bookmarks">Lesson %d added to bookmarks</string>
    <string name="removed_from_bookmarks">Lesson %d removed from bookmarks</string>
    <string name="marked_as_read">Lesson %d marked as read</string>
    <string name="press_back_once_more">Press back once more to exit</string>
    <string name="p_a">Premium activated!</string>
    <string name="purchase_canceled">Purchase canceled!</string>
    <string name="bookmarks_delete">Bookmark deleted</string>
    <string name="accept">Accept</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="thanks">Thanks!</string>
    <string name="version_available">Version available</string>
    <string name="ads_blocked">We have determined that you\'re blocking ads! You can\'t use this app without ads if you haven\'t bought Premium!</string>
    <string name="buy">Buy</string>
    <string name="offline">Offline</string>
    <string name="downloading">Downloading…</string>
    <string name="only_prem">Available only for Premium users</string>
    <string name="loading">Loading</string>
    <string name="unpacking">Unpacking</string>
    <string name="offline_activated">Offline activated</string>
    <string name="google_play_services_not_available">Google Play Services Not Available!</string>
    <string name="caption_lessons">Lessons</string>
    <string name="pref_sys_lang">App language</string>
    <string name="lang_changed">App language has been changed. Please restart the application</string>
    <string name="source_materials">Source materials - startandroid.ru</string>
    <string name="pref_download_lessons_tiltle">Download lessons</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="not_installed_offline">You do not have an offline resource pack installed!</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="webview_core">WebView Core</string>
    <string name="not_supported_on_your_device">Not supported on your device</string>

</resources>