<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="@string/general">

        <androidx.preference.ListPreference
            android:defaultValue="ru"
            android:dialogTitle="@string/choose_language"
            android:entries="@array/languages"
            android:entryValues="@array/language_values"
            android:icon="@drawable/ic_language"
            android:key="lang"
            android:title="@string/content_language" />

        <androidx.preference.ListPreference
            android:icon="@drawable/ic_app_lang"
            android:defaultValue="0"
            android:dialogTitle="@string/pref_sys_lang"
            android:entries="@array/app_languages"
            android:entryValues="@array/app_language_values"
            android:key="language"
            android:title="@string/pref_sys_lang" />

        <androidx.preference.Preference
            android:defaultValue="false"
            android:icon="@drawable/ic_webview"
            android:key="webview_core"
            android:title="@string/webview_core" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="@string/appearance">

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_grid"
            android:key="grid_mode"
            android:title="@string/grid_view" />

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_fullscreen"
            android:key="fullscreen_mode"
            android:title="@string/fullscreen_mode" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="@string/offline">

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_offline"
            android:key="offline"
            android:title="@string/offline" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:layout="@layout/preference_category_custom"
        android:title="@string/font">

        <androidx.preference.ListPreference
            android:defaultValue="100%"
            android:dialogTitle="@string/select_font_size"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size"
            android:icon="@drawable/ic_fontsize"
            android:key="font_size"
            android:title="@string/font_size" />

        <androidx.preference.ListPreference
            android:defaultValue="2"
            android:entries="@array/fonts"
            android:entryValues="@array/fonts_values"
            android:icon="@drawable/ic_font"
            android:key="font"
            android:title="@string/font_type" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
