<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

	<include
		layout="@layout/toolbar"/>

	<android.support.v7.widget.CardView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:gravity="top|center"
		card_view:cardCornerRadius="5dp"
		card_view:cardElevation="3dp"
		android:layout_margin="5dp">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:gravity="top|center">

			<ImageView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@mipmap/ic_launcher_round"
				android:layout_marginTop="65dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:layout_width="wrap_content"
				android:text="@string/app_name"
				android:layout_margin="5dp"
				android:gravity="center"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="@string/version"
				android:id="@+id/version"
				android:layout_marginBottom="5dp"
				android:gravity="center"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		card_view:cardCornerRadius="5dp"
		card_view:cardElevation="3dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:clickable="true"
			android:id="@+id/rateApp"
			android:focusable="true"
			android:foreground="?android:attr/selectableItemBackground"
			android:gravity="left|center">

			<ImageView
				android:layout_height="30dp"
				android:layout_width="30dp"
				android:padding="5dp"
				android:gravity="center"
				android:background="@drawable/star"
				android:layout_marginLeft="5dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="@string/rate"
				android:padding="10dp"
				android:gravity="left|center"
				android:layout_weight="1.0"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		card_view:cardCornerRadius="5dp"
		card_view:cardElevation="3dp"
		android:layout_marginBottom="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:clickable="true"
			android:id="@+id/moreApps"
			android:focusable="true"
			android:foreground="?android:attr/selectableItemBackground"
			android:gravity="left|center">

			<ImageView
				android:layout_height="30dp"
				android:layout_width="30dp"
				android:padding="5dp"
				android:gravity="center"
				android:background="@drawable/google_play"
				android:layout_marginLeft="5dp"/>

			<TextView
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_width="wrap_content"
				android:text="@string/more_apps"
				android:padding="10dp"
				android:gravity="left|center"
				android:layout_weight="1.0"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<View
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"/>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		card_view:cardCornerRadius="5dp"
		card_view:cardElevation="3dp"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:clickable="true"
		android:focusable="true"
		android:gravity="center"
		android:background="?android:attr/selectableItemBackground"
		android:id="@+id/webSite">

		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:text="@string/source"
			android:padding="10dp"
			android:layout_gravity="center"/>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		card_view:cardCornerRadius="5dp"
		card_view:cardElevation="3dp"
		android:layout_margin="5dp">

		<TextView
			android:layout_height="match_parent"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:text="@string/copyright"
			android:padding="10dp"
			android:gravity="center"/>

	</android.support.v7.widget.CardView>

</LinearLayout>

